# ospf-visualization

./: Cargo.toml  Dockerfile  docker-compose.yml  flake.nix  frr.conf  snmpd.conf
.github/workflows/: rust.yml
router_configs/: Dockerfile  daemons  docker-compose.yml  isisd.conf  ospfd.conf  snmpd.conf
router_configs/r1/: frr.conf
router_configs/r2/: frr.conf
router_configs/r3/: frr.conf
router_configs/r4/: frr.conf
router_configs/r5/: frr.conf
router_configs/r6/: frr.conf
router_configs/r7/: frr.conf
router_configs/r8/: frr.conf
src/: main.rs
src/data_aquisition/: core.rs  mod.rs  snmp.rs  ssh.rs
src/gui/: app.rs  autopoll.rs  edge_anim.rs  edge_shape.rs  mod.rs  node_panel.rs  node_shape.rs
src/network/: edge.rs  mod.rs  network_graph.rs  node.rs  router.rs
src/ospf_parser/: lsa.rs  mod.rs
src/parsers/: mod.rs
src/parsers/isis_parser/: byte_lsp.rs  core_lsp.rs  frr_json_lsp.rs  hostname.rs  mod.rs  protocol.rs  ssh_source.rs  topology.rs
src/parsers/ospf_parser/: lsa.rs  mod.rs  snmp.rs  snmp_source.rs  source.rs
src/topology/: mod.rs  ospf.rs  ospf_protocol.rs  protocol.rs  source.rs  store.rs
test_data/: isis_hostname_map_input.txt  lspdb_dump.json  test_node_deserialization.json  test_store.json
