[package]
name = "ospf-visualization"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33.0"
egui_graphs = "0.29.0"
egui = "0.33.0"
egui_extras = "0.33.2"
ipnetwork = { version = "0.21.1", features = ["serde"] }
nom-derive = "0.10.1"
ospf-parser = "0.5.0"
petgraph = "0.8.3"
snmp2 = { version = "0.4.8", features = ["full"] }
tokio = { version = "1.47.1", features = ["full"] }
uuid = { version = "1.18.1", features = ["v5"] }
serde = {"version" = "1.0.228", "features" = ["derive"]}
serde_json = "1.0.145"
humantime = "2.3.0"
hex = "0.4.3"
rand = "0.9.2"
async-trait = "0.1"
thiserror = "2.0.17"
ssh2 = "0.9.5"
